feat(cdp): add 7.1.7.0-551